gcc/testsuite/rust/rustc/ui/let-else/accidental-if.rs
fn main() {
    let x = Some(123);
    if let Some(y) = x else { // { dg-error "" "" { target *-*-* } }
        return;
    };
}

